updated features (cart,js,index)

--- a/Ecommerce/cart.html
+++ b/Ecommerce/cart.html
@@ -51,78 +51,78 @@
             <!---Box 2--->
                         <div class="product-box">
                            <img src="Images/product-2.jpg" alt="" class="product-img">
-                           <h2 class="product-title">Red Puma T-shirt</h2>
-                           <span class="price">$20.00</span>
+                           <h2 class="product-title">Black PUMA Shoes</h2>
+                           <span class="price">$50.00</span>
                            <i class="fa-solid fa-cart-plus add-cart"></i>
                         </div>
             <!---Box 3--->
                         <div class="product-box">
                             <img src="Images/product-3.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
-                            <span class="price">$20.00</span>
+                            <h2 class="product-title">PUMA Jogger</h2>
+                            <span class="price">$30.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
                          </div>
             <!---Box 4--->
                          <div class="product-box">
                             <img src="Images/product-4.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
-                            <span class="price">$20.00</span>
+                            <h2 class="product-title">Blue PUMA Polo-shirt</h2>
+                            <span class="price">$25.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
                          </div>
             <!---Box 5--->
                          <div class="product-box">
                             <img src="Images/product-5.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
-                            <span class="price">$20.00</span>
+                            <h2 class="product-title">PUMA High Cut Shoes</h2>
+                            <span class="price">$60.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
                          </div>
             <!---Box 6--->
                          <div class="product-box">
                             <img src="Images/product-6.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
+                            <h2 class="product-title">Black PUMA t-shirt</h2>
                             <span class="price">$20.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
                          </div>
             <!---Box 7--->            
                          <div class="product-box">
                             <img src="Images/product-7.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
+                            <h2 class="product-title">PUMA Socks</h2>
                             <span class="price">$20.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
                          </div>
             <!---Box 8---> 
                          <div class="product-box">
                             <img src="Images/product-8.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
-                            <span class="price">$20.00</span>
+                            <h2 class="product-title">Black PUMA Watch</h2>
+                            <span class="price">$55.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
                          </div>
             <!---Box 9---> 
                          <div class="product-box">
                             <img src="Images/product-9.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
-                            <span class="price">$20.00</span>
+                            <h2 class="product-title">Black Classic PUMA Watch</h2>
+                            <span class="price">$60.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
                          </div>
             <!---Box 10---> 
                          <div class="product-box">
                             <img src="Images/product-10.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
-                            <span class="price">$20.00</span>
+                            <h2 class="product-title">Black & RED PUMA Shoes Colorway</h2>
+                            <span class="price">$50.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
                          </div>
             <!---Box 11---> 
                          <div class="product-box">
                             <img src="Images/product-11.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
-                            <span class="price">$20.00</span>
+                            <h2 class="product-title">PUMA Grey Running Shoes</h2>
+                            <span class="price">$30.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
                          </div>
             <!---Box 12---> 
                          <div class="product-box">
                             <img src="Images/product-12.jpg" alt="" class="product-img">
-                            <h2 class="product-title">Red Puma T-shirt</h2>
-                            <span class="price">$20.00</span>
+                            <h2 class="product-title">Blue PUMA Polo-shirt</h2>
+                            <span class="price">$25.00</span>
                             <i class="fa-solid fa-cart-plus add-cart"></i>
     </div>
 </div>
