added login/register form using MD bootstrap 5

--- a/bondoc-do-automotivePartsEcommerceSite/contact-us.html
+++ b/bondoc-do-automotivePartsEcommerceSite/contact-us.html
@@ -8,7 +8,21 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
+      crossorigin="anonymous"/>
+      
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
+      rel="stylesheet"
     />
   </head>
   <body>
@@ -38,7 +52,7 @@
     </svg>
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/bondoc-do-automotivePartsEcommerceSite/index.html"
           ><img
             src="images/logo.png"
             style="max-width: 15%; max-height: auto"
@@ -58,7 +72,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a
@@ -72,20 +86,8 @@
                 >Contact Us</a
               >
             </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Custom Orders
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Order Requets</a></li>
-                <li><a class="dropdown-item" href="#">Track Order</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/login-signup.html" >Sign Up / Login</a>
             </li>
           </ul>
         </div>
@@ -133,9 +135,13 @@
     <!--Bootstrap js link-->
 
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-      crossorigin="anonymous"
-    ></script>
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
