--- a/bondoc-do-automotivePartsEcommerceSite/index.html
+++ b/bondoc-do-automotivePartsEcommerceSite/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DB MFG | Autoparts & Fabrication | Home</title>
@@ -8,7 +8,21 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
+      crossorigin="anonymous"/>
+      
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
+      rel="stylesheet"
     />
   </head>
 <body>
@@ -43,14 +57,8 @@
           <li class="nav-item">
             <a class="nav-link" href="#" >Contact Us</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" >
-              Custom Orders
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Order Requets</a></li>
-              <li><a class="dropdown-item" href="#">Track Order</a></li>
-            </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/login-signup.html" >Sign Up / Login</a>
           </li>
         </ul>
       </div>
@@ -118,6 +126,10 @@
 
 <!--Bootstrap js link-->
 
+<script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
