--- a/policarpio-ag-ecommerce/index.html
+++ b/policarpio-ag-ecommerce/index.html
@@ -30,9 +30,9 @@
     </nav>
 
     <div class="icons">
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-shopping-cart"></a>
         <a href="#" class="fas fa-user"></a>
+        <a href="#" class="fas fa-thumbs-up"></a>
+        <a href="#" class="fas fa-shopping-cart"></a>
     </div>
 
 </header>
@@ -125,6 +125,36 @@
 </section>
 
 <!-- home section ends -->
+
+<!-- service section starts -->
+
+<section class="service">
+
+    <div class="box-container">
+
+        <div class="box">
+            <i class="fas fa-shipping-fast"></i>
+            <h3>fast delivery</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, fugit.</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-undo"></i>
+            <h3>10 days replacement</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, fugit.</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-headset"></i>
+            <h3>24 x 7 support</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, fugit.</p>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- service section ends -->
 
 
 <!-- custom js file link-->
