--- a/policarpio-ag-ecommerce/index.html
+++ b/policarpio-ag-ecommerce/index.html
@@ -135,19 +135,19 @@
         <div class="box">
             <i class="fas fa-shipping-fast"></i>
             <h3>fast delivery</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, fugit.</p>
+            <p>Bringing you these fresh J's fast to your doors.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-undo"></i>
-            <h3>10 days replacement</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, fugit.</p>
+            <h3>7 days replacement</h3>
+            <p>Replacing J's that did not reach your expectations.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-headset"></i>
             <h3>24 x 7 support</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, fugit.</p>
+            <p>Here to hear all of your question and inquiries about the J's.</p>
         </div>
 
     </div>
