--- a/tongol-albert-full_responsive_multi_page_website_design/admin.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/admin.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 
-    <meta name="viewport" content="wit=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>University Website Design</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&display=swap" rel="stylesheet">
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -39,49 +38,19 @@
 
         </nav>
 
-        <h1>Contact Us</h1>
+        <h1>Login form</h1>
     </section>
-<!-----------------contact us content------------------>
+<!-----------------admin------------------>
 
-<section class="location">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3851.459608020209!2d120.58782767947102!3d15.13308316791338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f24ec2f5a1f9%3A0x5e0af8a6aaab2282!2sHoly%20Angel%20University!5e0!3m2!1sen!2sph!4v1663597411350!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</section>
-
-<section class="contact-us">
-    <div class="row">
-        <div class="contact-col">
-            <div>
-                <i class="fa fa-home"></i>
-                <span>
-                    <h5>#1 Holy Angel Avenue, Sto. Rosario,</h5>
-                    <p>Angeles City, Philippines 2009</p>
-                </span>
-            </div>
-            <div>
-                <i class="fa fa-phone"></i>
-                <span>
-                    <h5>(63) 045-625-5748<br>
-                        (63) 045-625-9620<br>
-                        (63) 045-625-9619</h5>
-                </span>
-            </div>
-            <div>
-                <i class="fa fa-envelope"></i>
-                <span>
-                    <h5>admissions@hau.edu.ph</h5>
-                    <p>Email us your query</p>
-                </span>
-            </div>
-        </div>
-        <div class="contact-col">
-            <form action="form-handler.php" method="post">
-                <input type="text" name="firstname" placeholder="Firstname" required>
-                <input type="text" name="lastname" placeholder="Lastname" required>
-                <input type="number" name="number" placeholder="Contact Number" required>
-                <input type="email" name="email" placeholder="Email Address" required>
-                <textarea rows="8" name="message" placeholder="Message" required></textarea>
-                <button type="submit" class="hero-btn red-btn">Send Form</button>  
-            </form>
+<section class="login">
+    <div class="container">
+        <div class="content">
+            <h3>Hi, <span>Admin</span></h3>
+            <h1>Welcome <span></span></h1>
+            <p>this is an Admin page</p>
+            <a href="login.html" class="btn">Login</a>
+            <a href="register.html" class="btn">Register</a>
+            <a href="logout.html" class="btn">Logout</a>
         </div>
     </div>
 </section>
