--- a/tongol-albert-full_responsive_multi_page_website_design/university/register.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/university/register.html
@@ -55,7 +55,7 @@
                 <option value="user">User</option>
                 <option value="admin">Admin</option>
             </select>
-            <input type="submit" name="submit" value="register now" class="form-btn">
+            <input type="submit" name="submit" value="Register Now" class="form-btn">
             <p>already have an account? <a href="login.html">Login now</a></p>
         </form>
     </div>
