--- a/tongol-albert-full_responsive_multi_page_website_design/university/login.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/university/login.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 
-    <meta name="viewport" content="wit=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>University Website Design</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&display=swap" rel="stylesheet">
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -39,23 +38,19 @@
 
         </nav>
 
-        <h1>About Us</h1>
+        <h1>Login form</h1>
     </section>
-<!-----------------about us content------------------>
+<!-----------------register------------------>
 
-<section class="about-us">
-    <div class="column">
-        <div class="about-col">
-            <h1>History</h1>
-        <div class="about-col">
-            <div class="left">
-                <img src="images/history1.jpg">
-            </div> 
-        </div>
-    </div>
-    <div class="about-col">
-        <p>In June 1933, Holy Angel Academy (HAA) opened its doors to a modest group of 78 high school students in the Holy Rosary Parish Convent. It was initiated through the joint efforts of the late Don Juan D. Nepomuceno, a known philanthropist/prominent businessman and Fr. Pedro P. Santos, then parish priest of the town of Angeles and later Archbishop of Nueva Caceres. Its primary purpose was to offer Catholic education in the secondary level, which was the felt need of the community at that...
-        <a href="history.html" class="red-btn">Continue Reading</a></p>
+<section class="register">
+    <div class="form-container">
+        <form action="" method="post">
+            <h3>Login now</h3>
+            <input type="email" name="email" required placeholder="Email">
+            <input type="password" name="password" required placeholder="Password">
+            <input type="submit" name="submit" value="Login Now" class="form-btn">
+            <p>don't have an account? <a href="register.html">Register now</a></p>
+        </form>
     </div>
 </section>
 
