ecommerce to blog type

--- a/policarpio-ag-blog/index.html
+++ b/policarpio-ag-blog/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<!-- header section starts -->
+<!-- header -->
 
 <header>
 
@@ -23,23 +23,16 @@
     <a href="#" class="logo">Jumpman's</a>
 
     <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#products">products</a>
         <a href="#featured">featured</a>
-        <a href="#review">review</a>
+        <a href="#best sellers">best sellers</a>
+        <a href="#new releases">new releases</a>
     </nav>
-
-    <div class="icons">
-        <a href="#" class="fas fa-user"></a>
-        <a href="#" class="fas fa-thumbs-up"></a>
-        <a href="#" class="fas fa-shopping-cart"></a>
-    </div>
 
 </header>
 
-<!-- header section ends -->
+<!-- header -->
 
-<!-- home section starts -->
+<!-- featured -->
 
 <section class="home" id="home">
 
@@ -49,7 +42,6 @@
                 <span>Air Jordan 1 High</span>
                 <h3>Air Jordan 1 High OG 'Heritage'</h3>
                 <p>The Air Jordan 1 Retro High OG Heritage flips the original Chicago colorway for a bold, unique look. It features a white and University Red smooth leather upper with black leather collars and red Swooshes.</p>
-                <a href="#" class="btn">add to cart</a>
             </div>  
             <div class="images">
                 <img src="images/home-shoe-1.png" class="shoe" alt="">
@@ -64,7 +56,6 @@
                 <span>Air Jordan 4</span>
                 <h3>Air Jordan 4 'Infrared'</h3>
                 <p>The Air Jordan 4 Infrared features a tonal grey Durabuck upper with black TPU mesh inserts, tech straps, and heel tabs. Hits of Infrared on the lacing system and woven Jordan Flight tongue label add a sharp contrast to the neutral-toned base. From there, a white sole with visible Air units completes the design.</p>
-                <a href="#" class="btn">add to cart</a>
             </div>  
             <div class="images">
                 <img src="images/home-shoe-2.png" class="shoe" alt="">
@@ -79,7 +70,6 @@
                 <span>Air Jordan 3</span>
                 <h3>Air Jordan 3 Retro 'Laser Orange'</h3>
                 <p>This OG-inspired Jordan 3 delivers all of the classic elements that are admired about the model, but with an additional splash of color. The Air Jordan 3 Laser Orange captures a similar look and feel to the classic White Cement colorway, instead featuring hits of Laser Orange on the midsole, lace holes, and Jumpman on the tongue.</p>
-                <a href="#" class="btn">add to cart</a>
             </div>  
             <div class="images">
                 <img src="images/home-shoe-3.png" class="shoe" alt="">
@@ -95,7 +85,6 @@
                 <span>Air Jordan 6</span>
                 <h3>Air Jordan 6 Retro 'UNC' White</h3>
                 <p>Jordan Brand drew inspiration from Michael Jordan's alma mater, the University of North Carolina, for the Air Jordan 6 Retro UNC White.</p>
-                <a href="#" class="btn">add to cart</a>
             </div>  
             <div class="images">
                 <img src="images/home-shoe-4.png" class="shoe" alt="">
@@ -110,7 +99,6 @@
                 <span>Air Jordan 7</span>
                 <h3>Air Jordan 7 Retro 'Barcelona Nights'</h3>
                 <p>The Air Jordan 7 'Barcelona Nights' features colors that nod to the bright lights of Barcelona with an all-black made up of smooth and nubuck leather.</p>
-                <a href="#" class="btn">add to cart</a>
             </div>  
             <div class="images">
                 <img src="images/home-shoe-5.png" class="shoe" alt="">
@@ -124,37 +112,131 @@
 
 </section>
 
-<!-- home section ends -->
+<!-- featured -->
 
-<!-- service section starts -->
+<!-- service -->
 
 <section class="service">
 
     <div class="box-container">
 
         <div class="box">
-            <i class="fas fa-shipping-fast"></i>
-            <h3>fast delivery</h3>
-            <p>Bringing you these fresh J's fast to your doors.</p>
+            <i class="fas fa-forward"></i>
+            <h3>fast update on whats new</h3>
+            <p>When new J's are release we will give you all of the details.</p>
         </div>
 
         <div class="box">
-            <i class="fas fa-undo"></i>
-            <h3>7 days replacement</h3>
-            <p>Replacing J's that did not reach your expectations.</p>
+            <i class="fas fa-face-smile"></i>
+            <h3>Good quality updates</h3>
+            <p>Giving you all what you need before you buy your brand new J's.</p>
         </div>
 
         <div class="box">
-            <i class="fas fa-headset"></i>
-            <h3>24 x 7 support</h3>
-            <p>Here to hear all of your question and inquiries about the J's.</p>
+            <i class="fas fa-fire"></i>
+            <h3>Giving you fire new releases</h3>
+            <p>Giving you the best quality news fire releases from J's.</p>
         </div>
 
     </div>
 
 </section>
 
-<!-- service section ends -->
+<!-- service -->
+
+<!-- best sellers -->
+
+<section class="bestsellers" id="bestsellers">
+
+    <h1 class="heading"> best <span> sellers</span></h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <img src="images/product-1.png" alt="">
+            <div class="content">
+                <h3>Air Jordan 1 Retro High Dark Mocha</h3>
+                <div class="price">₱25,000</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/product-2.png" alt="">
+            <div class="content">
+                <h3>Air Jordan 1 Retro High University Blue Black</h3>
+                <div class="price">₱20,000</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/product-3.png" alt="">
+            <div class="content">
+                <h3>Travis Scott x fragment x Air Jordan 1 High "Military Blue"</h3>
+                <div class="price">₱55,000</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/product-4.png" alt="">
+            <div class="content">
+                <h3>Travis Scott x Air Jordan 1 Low "Reverse Mocha"</h3>
+                <div class="price">₱52,000</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/product-5.png" alt="">
+            <div class="content">
+                <h3>Air Jordan 1 Low “Vintage Grey”</h3>
+                <div class="price">₱6,500</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/product-6.png" alt="">
+            <div class="content">
+                <h3>Air Jordan 1 Low “Smoke Grey Toe”</h3>
+                <div class="price">₱20,000</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/product-7.png" alt="">
+            <div class="content">
+                <h3>Air Jordan 4 Neon "Air Max 95 Neon"</h3>
+                <div class="price">₱20,000</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/product-8.png" alt="">
+            <div class="content">
+                <h3>Nike Air Jordan 11 "Legend Blue"</h3>
+                <div class="price">₱13,000</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/product-9.png" alt="">
+            <div class="content">
+                <h3>Air Jordan 5 “Grape”</h3>
+                <div class="price">₱19,000</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/product-10.png" alt="">
+            <div class="content">
+                <h3>Air Jordan 7 “Retro Citrus”</h3>
+                <div class="price">₱9,500</div>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- best sellers -->
 
 
 <!-- custom js file link-->
