updated to blog

--- a/policarpio-ag-blog/index.html
+++ b/policarpio-ag-blog/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"
-    <title>complete responsive ecoomerce website design tutorials</title>
 
 <!-- font awesome cdn link -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -24,7 +23,7 @@
 
     <nav class="navbar">
         <a href="#featured">featured</a>
-        <a href="#best sellers">best sellers</a>
+        <a href="#popular">popular</a>
         <a href="#new releases">new releases</a>
     </nav>
 
@@ -34,7 +33,7 @@
 
 <!-- featured -->
 
-<section class="home" id="home">
+<section class="featured" id="featured">
 
     <div class="slide-container active" >
         <div class="slide">
@@ -144,11 +143,11 @@
 
 <!-- service -->
 
-<!-- best sellers -->
+<!-- popular -->
 
-<section class="bestsellers" id="bestsellers">
+<section class="popular" id="popular">
 
-    <h1 class="heading"> best <span> sellers</span></h1>
+    <h1 class="heading">popular</h1>
 
     <div class="box-container">
 
@@ -156,7 +155,7 @@
             <img src="images/product-1.png" alt="">
             <div class="content">
                 <h3>Air Jordan 1 Retro High Dark Mocha</h3>
-                <div class="price">₱25,000</div>
+                <div class="detail">It landed when many sneakerheads started coming around to the idea that pared-back, neutral palettes could be the way forward for a sneaker world that was reaching something like terminal velocity.</div>
             </div>
         </div>
 
@@ -164,7 +163,7 @@
             <img src="images/product-2.png" alt="">
             <div class="content">
                 <h3>Air Jordan 1 Retro High University Blue Black</h3>
-                <div class="price">₱20,000</div>
+                <div class="detail">Jordan Brand paid homage to MJ's alma mater with the Air Jordan 1 High University Blue.</div>
             </div>
         </div>
 
@@ -172,7 +171,7 @@
             <img src="images/product-3.png" alt="">
             <div class="content">
                 <h3>Travis Scott x fragment x Air Jordan 1 High "Military Blue"</h3>
-                <div class="price">₱55,000</div>
+                <div class="detail">The resulting design finds the foundational sneaker dressed in white tumbled leather with Scott's signature inverted Swoosh in contrasting black leather.</div>
             </div>
         </div>
 
@@ -180,7 +179,7 @@
             <img src="images/product-4.png" alt="">
             <div class="content">
                 <h3>Travis Scott x Air Jordan 1 Low "Reverse Mocha"</h3>
-                <div class="price">₱52,000</div>
+                <div class="detail">The Travis Scott x Air Jordan 1 Low “Reverse Mocha” flips 2019's “Dark Mocha” with a mix of “Sail/University Red/Ridgerock.” </div>
             </div>
         </div>
 
@@ -188,7 +187,7 @@
             <img src="images/product-5.png" alt="">
             <div class="content">
                 <h3>Air Jordan 1 Low “Vintage Grey”</h3>
-                <div class="price">₱6,500</div>
+                <div class="detail">This offering of the Air Jordan 1 Low features a White leather base with Grey overlays, Swooshes, laces, tongue Jumpman and rubber outsole.</div>
             </div>
         </div>
 
@@ -196,7 +195,7 @@
             <img src="images/product-6.png" alt="">
             <div class="content">
                 <h3>Air Jordan 1 Low “Smoke Grey Toe”</h3>
-                <div class="price">₱20,000</div>
+                <div class="detail">Inspired by the original that debuted in 1985, the Air Jordan 1 Low offers a clean, classic look that's familiar yet always fresh. </div>
             </div>
         </div>
 
@@ -204,7 +203,7 @@
             <img src="images/product-7.png" alt="">
             <div class="content">
                 <h3>Air Jordan 4 Neon "Air Max 95 Neon"</h3>
-                <div class="price">₱20,000</div>
+                <div class="detail">The Jordan 4 is composed of a tonal grey upper with white netting underlays and neon detailing. A split-color Jordan Flight patch on the tongue, black sole, and patterned laces complete the design.</div>
             </div>
         </div>
 
@@ -212,7 +211,7 @@
             <img src="images/product-8.png" alt="">
             <div class="content">
                 <h3>Nike Air Jordan 11 "Legend Blue"</h3>
-                <div class="price">₱13,000</div>
+                <div class="detail">The Air Jordan 11 Low Legend Blue features an all-white upper constructed of smooth leather and patent leather. Jumpman and "23" insignias are displayed on the back of the ankle. </div>
             </div>
         </div>
 
@@ -220,7 +219,7 @@
             <img src="images/product-9.png" alt="">
             <div class="content">
                 <h3>Air Jordan 5 “Grape”</h3>
-                <div class="price">₱19,000</div>
+                <div class="detail">One of the original four colorways released in 1990, the sneaker was worn by MJ during a Wheaties box cover shoot and by Will Smith on the Fresh Prince of Bel-Air.</div>
             </div>
         </div>
 
@@ -228,7 +227,7 @@
             <img src="images/product-10.png" alt="">
             <div class="content">
                 <h3>Air Jordan 7 “Retro Citrus”</h3>
-                <div class="price">₱9,500</div>
+                <div class="detail">The Air Jordan 7 Retro Citrus 2022 features a Black Durabuck upper, with citrus and red highlights on the sole.</div>
             </div>
         </div>
 
@@ -236,7 +235,7 @@
 
 </section>
 
-<!-- best sellers -->
+<!-- popular -->
 
 
 <!-- custom js file link-->
