--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -19,9 +19,9 @@
             <nav>
                 <ul id="MenuItems">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
