--- a/tongol-a/university/college.html
+++ b/tongol-a/university/college.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="header">
+    <section class="sub-header">
 
         <nav>
             <a href="index.html"><img src="images/logo.png"></a>
@@ -39,22 +39,17 @@
 
         </nav>
 
-        <div class="text-box">
-            <h1>The First Lay-founded and <br>Co-educational Catholic School</h1>
-            <p>Private research non-profit coeducational Basic and <br>Higher education institution</p>
-            <a href="https://www.hau.edu.ph/" target="_blank" class="hero-btn"> Visit Us To Know More</a>
-        </div>
-
+        <h1>College</h1>
     </section>
-<!-----------------Course------------------>
+<!----------------AcadPrograms------------------>
 
 <section class="course">
-    <h1>Academic Programs</h1>
-    <p>HAU offers various academic programs from basic education, undergraduate, to postgraduate levels. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities. </p>
+    <h1>Our College</h1>
+    <p>HAU offers cutting-edge academic programs for the undergraduate level. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities.</p>
     <div class="row">
         <div class="course-col">
-            <h3>Basic Education</h3>
-            <p>The Laboratory Elementary School was established in 1960 primarily as a training ground for the students of the College of Education. A Grade One class was initially opened with the children of the workers of the founder, Don Juan D. Nepomuceno, as the pupils who all studied free of charge.</p>
+            <h3>School of Business and Accountancy</h3>
+            <p>Two years after Holy Angel reopened at the end of World War II, the school was rapidly moving forward. The student population doubled in size in the School Year 1947-48 after the closure of Angeles Academy. It opened a two-year education program leading to an Elementary Teacher's Certificate (ETC) because of the demand for qualified teachers following the post-war construction of public elementary schools.</p>
         </div>
         <div class="course-col">
             <h3>College</h3>
@@ -67,34 +62,7 @@
     </div>
 </section>
 
-<!-----------------Campus----------------->
-
-<section class="campus">
-    <h1>Our Angelite Campus</h1>
-
-    <div class="row">
-        <div class="campus-col">
-            <img src="images/ggn.png">
-            <div class="layer">
-                <h3>Geromin G. Nepomuceno Building</h3>
-            </div>
-        </div>
-        <div class="campus-col">
-            <img src="images/sjh.jpg">
-            <div class="layer">
-                <h3>Saint Joseph Hall</h3>
-            </div>
-        </div>
-        <div class="campus-col">
-            <img src="images/sfj.jpg">
-            <div class="layer">
-                <h3>San Francisco Javier Building</h3>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-------------------Facilities---------------->
+<!-------------facilities---------------->
 
 <section class="facilities">
     <h1>Our Facilities</h1>
@@ -116,45 +84,6 @@
                 <p>Located at the 2nd floor of the library and is provided with two (2) computer units w/ internet connections. It can accommodate 12-15 faculty at one time.</p>
         </div>
     </div>
-</section>
-
-<!-----------------testimonials------------------>
-
-    <section class="testimonials">
-        <h1>What Our Formal Students Says</h1>
-    <div class="row">
-        <div class="testimonials-col">
-            <img src="images/user1.jpg">
-            <div>
-                <p>Holy Angel University is, if not the best, one of the best schools in the region teaching accountancy. The atmosphere is highly suitable to learning. Professors (specifically) in the Accountancy Department also practice their profession and share real-life situations which makes every class interesting.</p>
-                <h3>Nicole Mercado</h3>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-half-o"></i>
-            </div>
-        </div>
-        <div class="testimonials-col">
-            <img src="images/user2.jpg">
-            <div>
-                <p>I have chosen this particular school because of it's quality education. The University prepares it's students in every aspect of their lives, giving them the best ambiance and education possible. It also gives it's students a sense of comfort, no one will ever feel out of place.</p>
-                <h3>Patrick Santos</h3>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-        </div>
-    </div>
-    </section>
-
-<!----------------Call To Action------------------>
-
-<section class="cta">
-    <h1>Enroll For Various Online Courses <br> Anywhere From Around the World</h1>
-    <a href="" class="hero-btn">Contact Us</a>
 </section>
 
 <!--------------------Footer---------------------->
