--- a/Final-Output/Ecommerce/index.html
+++ b/Final-Output/Ecommerce/index.html
@@ -10,6 +10,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css">
     </head>
     <body>
+        <?php
+        include ("register_form.php");
+        ?>
         <div class="header">
         <div class ="container">
         <div class ="navbar">
